--- a/site/index.html
+++ b/site/index.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head> 
+    <head>
         <meta charset="UTF-8" />
         <title>HYYYPE</title>
         <link href="./css/main.css" rel="stylesheet"> </link>
+        <script src="./jss/main.js"></script>
     </head>
 
     <body>
 
-        <div class="a">
-            <p>NO MAN'S SKY</p>
-        </div>
+            <div class="lol">
 
-        <div class="b">
-            <p>Play With Friends</p>
-        </div>
+                <div class="lel">
+                    <p class="fap">START</p>
+                </div>
 
-        <div class="c">
-            <p>Explore</p>
-        </div>
+                <div class="lel">
+                    <p class="fap">FRIENDS</p>
+                </div>
 
-        <div class="d">
-            <p>Millions of unique planets <br/> and creatures</p>
-        </div>
+                <div class="lel">
+                    <p class="fap">EXPLORE</p>
+                </div>
 
-        <div class="e">
+                <div class="lel">
+                    <p class="fap">CREATURES</p>
+                </div>
 
-        </div>
+            </div>
+
+            <div class="a">
+                <p class="derp">NO MAN'S SKY</p>
+            </div>
+
+            <div class="b">
+                <p class="derp">Play With Friends</p>
+            </div>
+
+            <div class="c">
+                <p class="derp">Explore</p>
+            </div>
+
+            <div class="d">
+                <p class="derp">Millions of unique planets <br/> and creatures</p>
+            </div>
+
+            <div class="e">
+                <p class="derp">THIS IS A FOOTER</p>
+            </div>
 
     </body>
 </html>
